[tool.poetry]
name = "gerador-de-senha"
version = "0.1.0"
description = ""
authors = ["sabryaguiar <sabrinaaguiar344@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysimplegui = "^4.60.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
